--- a/dash1.html
+++ b/dash1.html
@@ -51,15 +51,15 @@
         <h1>מערכת רמה ממונה - כיפת ברזל</h1>
     </header>
     <div class="container">
-        <div class="description">
-            <p>דף זה מציג מבט-על עבור הדרג הבכיר – אנשי המטה או מקבלי החלטות ברמה הארצית. המערכת כוללת:</p>
-            <ul>
-                <li>אחוז כשירות פר סוללה</li>
-                <li>מפת זמינות טילים לפי אזור</li>
-                <li>חוסרים ממוצעים לפי סוללה</li>
-            </ul>
-            <p>התרשימים מספקים מידע קריטי לגבי מוכנות כללית, איתור פערים ותכנון הקצאות.</p>
-        </div>
+<div class="description">
+    <p>הדאשבורד הזה מיועד למקבלי ההחלטות, והוא כולל:</p>
+    <ul>
+        <li>ניתוח נתונים לגבי כמות המארזים והמיירטים הזמינים והתקינים בכל סוללה</li>
+        <li>זיהוי חוסרים מסוימים</li>
+        <li>חוסר ממוצע בטילים פר מארז (בכדי להבין כמה מארזים קיימים אך לא ממומשים באופן מלא)</li>
+    </ul>
+    <p>התרשימים מספקים מידע קריטי לגבי מוכנות כללית, איתור פערים ותכנון הקצאות.</p>
+</div>
         <div class="tableau-embed">
             <iframe src="https://public.tableau.com/views/government_17528352712790/sheet0?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link&:embed=y&:showVizHome=n" 
                     title="תרשים רמה ממונה"></iframe>
