--- a/dash2.html
+++ b/dash2.html
@@ -59,7 +59,7 @@
                 <li>ממוצע טילים זמינים למארז</li>
                 <li>זיהוי חריגות – מארזים עם תקלות חוזרות או תחזוקה נדרשת</li>
             </ul>
-            <p>המערכת מאפשרת קבלת התרעות בזמן אמת וזיהוי בעיות צפויות.</p>
+            <p>המערכת מאפשרת קבלת התרעות אמת על מוכנות הסוללה למסו"ל, ונותנת לו אידיקציה האם במהלך לחימה הסוללה מוכנה מבצעית ולא תיתקל בקשיים של חוסר הספקי הגנה..</p>
         </div>
         <div class="tableau-embed">
             <iframe src="https://public.tableau.com/views/Commander_17528352060180/-?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link&:embed=y&:showVizHome=n" 
