--- a/dash3.html
+++ b/dash3.html
@@ -59,7 +59,7 @@
                 <li>פילוחים לפי סטטוס זמינות</li>
                 <li>מדד מרחק מתאריך תחזוקה נדרש</li>
             </ul>
-            <p>המערכת מאפשרת תעדוף טיפול לפי עומסים, סיכון תקלות וזמני אחסון.</p>
+            <p>המערכת מאפשרת תעדוף טיפול לפי עומסים, סיכון תקלות וזמני אחסון. נותנת לקצ"ט לתכנן דרכי פעולה מיידיים - ולהבין מה המשימות החשובות שלו, ומה המשימות הדחופות שלו.</p>
         </div>
         <div class="tableau-embed">
             <iframe src="https://public.tableau.com/views/Technicalofficer/sheet2?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link&:embed=y&:showVizHome=n" 
