--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
         </div>
     </div>
     <footer>
-        <p>מערכת זו פותחה עבור תמיכה בתפעול כיפת ברזל © 2025</p>
+        <p>מערכת זו פותחה עבור תמיכה בתפעול כיפת ברזל © 2025 פותחה ע"י חן אסיאג.</p>
+        <p>נתונים פיקטייבים לחלוטין.</p>
+
     </footer>
     <script>
         document.querySelectorAll('.dashboard-button').forEach(button => {
